--- a/templates/article.html
+++ b/templates/article.html
@@ -34,22 +34,44 @@
                     {% end %}
                 </ul>
             </nav>
-            <section id="comments">
-                <h3>留言</h3>
-                {% if article.has_key("comments") %}
-                {% for comment in article["comments"] %}
-                    {% module comment(comment) %}
-                {% end %}
-                {% end %}
-            </section>
-            <section id="do_comments">
-                <h3>发表留言</h3>
-                <input type="input" name="name">
-                <input type="input" name="email">
-                <input type="input" name="verify">
-                <input type="input" name="to_comment">
-            </section>
         </footer>
     </article>
+
+    <section id="comments">
+        <h3>留言</h3>
+        {% if article.has_key("comments") %}
+        {% for comment in article["comments"] %}
+        {% module comment(comment) %}
+        {% end %}
+        {% end %}
+    </section>
+
+    <section id="do_comments">
+        <h3>发表留言</h3>
+        <form action="TODO" method="post">
+            <fieldset id="commenter_info">
+                <legend>评论 </legend>
+                <ol>
+                    <li>
+                        <label for="name">姓名：</label>
+                        <input id="commenter_name" type="text" name="name">
+                    </li>
+                    <li>
+                        <label for="email">email：</label>
+                        <input id="commenter_name" type="text" name="email" placeholder="me@example.com">
+                    </li>
+                    <li>
+                        <label for="verify">验证码：</label>
+                        <input id="commenter_verify" type="text" name="verify" placeholder="请输入8" autocomplete = "off">
+                    </li>
+                    <li>
+                        <label for="comment">姓名:</label>
+                        <input id="commenter_comment" type="text" name="comment">
+                    </li>
+                    <li><input type="submit" value="Submit"></li>
+                </ol>
+            </fieldset>
+        </form>
+    </section>
 </section>
 {% end %}
