first level static_design complete

--- a/templates/article.html
+++ b/templates/article.html
@@ -4,7 +4,7 @@
     {% raw signin %}
 {% end %}
 
-{% block articles_content %}
+{% block content %}
 <section id = "content">
     <header>
     </header>
