--- a/templates/home.html
+++ b/templates/home.html
@@ -1,6 +1,6 @@
 {% extends frame.html %}
 
-{% block articles_content %}
+{% block content %}
 <section id="posts">
 	{% for article in articles %}
         {% module art_summary(article) %}
