--- a/templates/modules/art_summary.html
+++ b/templates/modules/art_summary.html
@@ -18,7 +18,7 @@
 	{% end %}
 	{% raw article["content"] %}
 	<footer>
-		<p><a href="/article/{% raw article["href"] %}"> <i>{% raw len(article["comments"]) %} Comments</i></a></p>
+		<p><a href="/article/{% raw article["href"] %}"> <i>{% raw len(article["comment"]) %} Comments</i></a></p>
 	</footer>
 	<hr class="article_line"/>
 </article>
