--- a/templates/modules/comment.html
+++ b/templates/modules/comment.html
@@ -1,7 +1,7 @@
 <article class="comment">
 	<p>{{ comment["content"] }}</p>
-	<p class="commenter">Posted by <a>{{ comment["author"] }}</a> on
-		<time>{{ comment["posted_date"] }}</time>
+	<p class="commenter">Posted by <a>{{ comment["author"]["name"] }}</a> on
+        <time>{% raw comment["posted_date"].strftime("%Y-%m-%d %H:%M") %}</time>
 	</p>
 	<hr class="comment_line"/>
 </article>
