--- a/templates/login.html
+++ b/templates/login.html
@@ -13,12 +13,12 @@
         <fieldset>
             <ol>
                 <li>
-                    <label for="user_name">user:</label>
-                    <input name = "user_name" type="text"/>
+                    <label for="author_name">user:</label>
+                    <input name = "author_name" type="text"/>
                 </li>
                 <li>
-                    <label for="user_password">password:</label>
-                    <input name = "user_password" type="password"/>
+                    <label for="author_password">password:</label>
+                    <input name = "author_password" type="password"/>
                 </li>
                 <li>
                     <input type="submit"/ value="登陆"/>
