--- a/templates/article.html
+++ b/templates/article.html
@@ -21,22 +21,24 @@
                 {% end %}
             </p>
         </header>
+
         {% raw article["content"] %}
+
         <footer>
             <nav>
                 <ul>
-                    {% if article.has_key("previous") %}
-                    <li><a href="{% raw article["previous"]["href"] %}"> &lt&lt {%raw article["previous"]["title"] %} </a></li>
+                    {% if previous_article %}
+                    <li><a href="/article/{% raw previous_article["href"] %}"> &lt&lt {%raw previous_article["title"] %} </a></li>
                     {% end %}
                     <li><a href="/">首页</a></li>
-                    {% if article.has_key("next") %}
-                    <li><a href="{% raw article["next"]["href"] %}"> {% raw article["next"]["title"] %} &gt&gt </a></li>
+                    {% if next_article %}
+                    <li><a href="/article/{% raw next_article["href"] %}"> {% raw next_article["title"] %} &gt&gt </a></li>
                     {% end %}
                 </ul>
             </nav>
+
             {% if current_user %}
-            <p> <a href="/update?article_id={% raw article["_id"] %}"> <i> 编辑</i></a> </p>
-            {# <p> <a href="/article/{% raw article["href"] %}"> <i> 删除 </i></a> </p> #}
+            <p> <a href="/update?article_href={% raw article["href"] %}"> <i> Edit</i></a> </p>
             {% end %}
         </footer>
     </article>
@@ -50,31 +52,32 @@
         {% end %}
     </section>
 
-    <section id="do_comments">
+    <section>
         <h3>发表留言</h3>
         <form action="/comment" method="post">
             {% raw xsrf_form_html() %}
-            <input type="hidden" name="article_id" value = {% raw article["_id"] %}>
-            <fieldset id="commenter_info">
+            <input type="hidden" name="article_href" value = {% raw article["href"] %}>
+
+            <fieldset>
                 <legend>评论 </legend>
                 <ol>
                     <li>
                         <label for="name">姓名：</label>
-                        <input id="commenter_name" type="text" name="name">
+                        <input type="text" name="comment_name">
                     </li>
                     <li>
                         <label for="email">email：</label>
-                        <input id="commenter_name" type="text" name="email" placeholder="me@example.com">
+                        <input type="text" name="comment_email" placeholder="me@example.com">
                     </li>
                     <li>
                         <label for="verify">验证码：</label>
-                        <input id="commenter_verify" type="text" name="verify" placeholder="请输入8" autocomplete = "off">
+                        <input type="text" name="verify" placeholder="请输入8" autocomplete = "off">
                     </li>
                     <li>
                         <label for="comment">输入评论:</label>
-                        <textarea name="comment" cols=40 rows=8></textarea>
+                        <textarea name="comment_content" cols=40 rows=8></textarea>
                     </li>
-                    <li><input type="submit" value="Submit"></li>
+                    <li><input type="submit" value="submit"></li>
                 </ol>
             </fieldset>
         </form>
