change article list to show summary, add 404_500 page, add me, add a simple error handler

--- a/static/style.css
+++ b/static/style.css
@@ -102,7 +102,7 @@ section#read_guide {
 section#posts aside, section#content aside {
     float: right;
     width: 35%;
-    margin-left: 5%;
+    /* margin-left: 5%; */
     font-size: 20px;
     line-height: 40px;
 }
