--- a/templates/article.html
+++ b/templates/article.html
@@ -45,9 +45,12 @@
 
     <section id="comments">
         {% if article.has_key("comment") %}
+        {% set article("comment") = article("comment")[::-1] %}
+        {% set floor = 1 %}
         <h3>留言</h3>
         {% for comment in article["comment"] %}
-        {% module comment(comment) %}
+        {% module comment(comment, floor) %}
+        {% set floor = floor + 1 %}
         {% end %}
         {% end %}
     </section>
