--- a/templates/modules/art_summary.html
+++ b/templates/modules/art_summary.html
@@ -2,7 +2,7 @@
     <header>
         <h2> {% raw article["title"] %}</h2>
         <p>
-            {% if article.has_key("updated_date") %}
+            {% if article["updated_date"] != article["posted_date"] %}
             Updated by {% raw article["author"] %} on
             <time>{% raw article["updated_date"].strftime("%Y-%m-%d %H:%M") %}</time>
             {% else %}
