--- a/static/style.css
+++ b/static/style.css
@@ -28,11 +28,6 @@ body header#page_header, footer#page_footer {
     width: 100%;
 }
 
-/* body#article header#page_header, footer#page_footer{ */
-/*     margin-left: 20%; */
-/*     width: 100%; */
-/* } */
-
 footer#page_footer {
     text-align:center;
     width: 100%;
@@ -90,13 +85,26 @@ section#content {
     width: 74%;
 }
 
-section#content nav {
-    text-align: center;
-}
-
 section#read_guide {
     float: left;
     width: 20%;
+}
+
+li#previous_article {
+    float: left;
+    text-align: right;
+    width: 40%;
+}
+
+/*li#next_article {
+    float: right;
+    text-align: left;
+    width: 50%;
+}*/
+
+li#go_home {
+    float: left;
+    text-align: center;
 }
 
 section#posts aside, section#content aside {
